Fixed z-index in header, removed unnecessary margin, padding, text decoration. Changed div and p tags to figure and figcaption for photos

--- a/styles/style.css
+++ b/styles/style.css
@@ -68,7 +68,7 @@
   position: absolute;
   top: 135px;
   right: 20px;
-  z-index: 1;
+  z-index: -1;
   max-width: 636px;
 }
 
@@ -88,7 +88,6 @@
 
 .header__link:hover {
   color: #1f69c9;
-  text-decoration: none;
 }
 
 .header__address {
@@ -183,6 +182,7 @@
 }
 
 .person {
+  margin: 0;
   position: absolute;
   display: flex;
   align-items: center;
@@ -269,6 +269,7 @@
 
 .staff__cards {
   margin: 0 auto;
+  padding: 0;
   max-width: 760px;
   list-style-type: none;
   display: flex;
@@ -475,5 +476,5 @@
 }
 
 .footer__copyright {
-  margin-top: 108px;
+  margin: 108px 0 0;
 }
